--- a/style.css
+++ b/style.css
@@ -107,17 +107,15 @@ body {
 }
 
 .link:hover {
-  color: #fff;
-}
-
-.current_link {
   color: white;
+  opacity: 1;
 }
 
 .main {
   display: grid;
   margin-top: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: center;
   max-width: 800px;
 }
 
@@ -167,7 +165,7 @@ body {
   font-size: var(--card_title_font_size);
 }
 
-.task_time {
+.current_task_time {
   font-weight: var(--regular_weight);
   opacity: 70%;
 }
@@ -254,8 +252,8 @@ body {
   }
   .task_container {
     max-width: 200px;
-    height: 60%;
-    margin-bottom: 10rem;
+    height: 70%;
+    margin-bottom: 9rem;
   }
   .task__top {
     height: 40%;
@@ -275,7 +273,7 @@ body {
   .exercise .icon {
     clip-path: inset(12% 0 0 0);
   }
-  .task_time {
+  .current_task_time {
     margin-top: 1rem;
     font-size: 2.5rem;
   }
